feat: move criteria methods to utils class + improve tests
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>